--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <img src="src/images/ok.svg" height="20" width="20">
               Save              
             </button>           
-            <button class="task-edit__button-remove btn btn-outline-danger" type="button">
+            <button class="task-edit__button-remove btn btn-outline-danger" type="button" disabled>
               <img src="src/images/remove.svg" height="20" width="20">
               Remove              
             </button>
@@ -98,7 +98,7 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <div class="footer">
       <ul>
         <li>
           <button class="footer-button button-new btn btn-outline-info" type="button">
@@ -131,7 +131,7 @@
           </button>
         </li>
       </ul>
-    </footer>
+    </div>
   </div>
 
 <script type="text/javascript" src="assets/bundle.js"></script></body>
