--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </button>
         </li>
         <li>
-          <button class="footer-button button-today btn btn-outline-info" type="button">
+          <button class="footer-button button-today btn btn-outline-info" type="button" disabled>
              <img src="src/images/calendar.svg" height="20" width="20">
              Today
           </button>
