--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="application.appcache">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
