--- a/src/indexSrc.html
+++ b/src/indexSrc.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="application.appcache">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
